--- a/forgetstyle.css
+++ b/forgetstyle.css
@@ -1,4 +1,9 @@
-.bd{
+body{
 
-    background-color: slategray;
+    padding-top: 50px;
+    background-image: url("hospital.jpg");
+    background-color: #cccccc;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
 }
