--- a/forgetstyle.css
+++ b/forgetstyle.css
@@ -7,3 +7,15 @@ body{
     background-position: center;
     background-size: cover;
 }
+div.seven{
+    width:50%;
+    height:100px;
+    float:left;
+    background-color:red;
+}
+div.eight{
+    width:50%;
+    height:100px;
+    float:right;
+    background-color:red;
+}
